# chara-notify

./: .gitignore  Cargo.toml  README,md  README.md
eval/: eval_pic  eval_pic.py  model-resnet_custom_v3.pt  tag_class
src/: evaluater.rs  handler.rs  image.rs  lib.rs  main.rs
src/commands/: config.rs  mod.rs
