[package]
name = "image-notify-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.75"
dashmap = "5.5.3"
poise = "0.5.2"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11.2"
tokio = { version = "1.24.1", features = ["macros", "rt-multi-thread", "process"] }
tokio-util = { version = "0.7.4", features = ["codec"] }
